Atualizacao de referencia

--- a/Dissertacao_Marcelo_Goncalves/capitulos/processo.tex
+++ b/Dissertacao_Marcelo_Goncalves/capitulos/processo.tex
@@ -396,6 +396,7 @@ da Inferência de Desempenho após várias iterações do laço compreendido pel
 Processo de Avaliação. Por hora, continuemos com a descrição dos passos seguintes.
 
 \subsection{Seleção dos Próximos Cenários}
+\label{subsec:selecao_cenarios}
 Passada a fase de Inferência de Desempenho, o processo segue seu caminho, tomando
 as decisões que levarão à seleção dos cenários seguintes a serem avaliados quanto
 à sua capacidade.
